@@ -123,6 +123,7 @@ SEXP rgl_init(SEXP initValue, SEXP useNULL, SEXP in_namespace)
    {"rgl_id_count", 		(DL_FUNC) &rgl_id_count, 3, aIII},  
    {"rgl_ids", 			(DL_FUNC) &rgl_ids, 4, aIISI},  
    {"rgl_viewpoint", 		(DL_FUNC) &rgl_viewpoint, 3, aLID},    
+   {"rgl_getObserver", 	        (DL_FUNC) &rgl_getObserver, 2, aID},
    {"rgl_setObserver", 	        (DL_FUNC) &rgl_setObserver, 2, aID},
    {"rgl_attrib_count", 	(DL_FUNC) &rgl_attrib_count, 3, aIII}, 
    {"rgl_attrib", 		(DL_FUNC) &rgl_attrib, 5, aIIIID}, 
@@ -176,6 +177,7 @@ SEXP rgl_init(SEXP initValue, SEXP useNULL, SEXP in_namespace)
    FUNDEF(rgl_id_count, 3), 
    FUNDEF(rgl_ids, 4), 
    FUNDEF(rgl_viewpoint, 3), 
+   FUNDEF(rgl_getObserver, 2),
    FUNDEF(rgl_setObserver, 2),
    FUNDEF(rgl_attrib_count, 3), 
    FUNDEF(rgl_attrib, 5), 
